@@ -570,7 +570,7 @@ extern filledcurves_opts filledcurves_opts_data;
 extern filledcurves_opts filledcurves_opts_func;
 
 /* Prefer line styles over plain line types */
-#ifdef BACKWARDS_COMPATIBLE
+#if TRUE || defined(BACKWARDS_COMPATIBLE)
 extern TBOOLEAN prefer_line_styles;
 #else
 #define prefer_line_styles FALSE
